fixed div overflow on login page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -283,6 +283,7 @@ div{
 /*Add some margin between lines*/
 .mainContent .lineContainer{
   margin-top: 6px;
+  overflow: auto;
 }
 
 /*============================ALERTS====================================*/
@@ -292,6 +293,7 @@ div{
   text-align: center;
   margin-top: 30px;
   font-size: 16px;
+  overflow: auto;
 }
 
 /*Sign Up Page Alert Container*/
@@ -321,6 +323,10 @@ div .alert{
   width: 300px;
   background-color: red;
 
+}
+
+.postItemContent{
+  overflow: auto;
 }
 
 /*================Post Item Page Style=============*/
